--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
             <h2 class="visually-hidden">Section 2</h2>
         <ul class="listii">
             <li class="forstrategy">
+                <div class="antennae">
+                <svg width="64" height="64">
+                    <use href="./images/SVG-sprite icons.svg/antenna 1.svg" #="antenna1.svg"></use> 
+                </svg>  
+                </div>
                 <h3 class="dos">
                     Strategy
                 </h3>   
