--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li class="forstrategy">
                 <div class="antennae">
                 <svg width="64" height="64">
-                    <use href="./images/icons.svg#antenna 1"></use> 
+                    <use href="./images/icons.svg#antenna 1" />
                 </svg>  
                 </div>
                 <h3 class="dos">
