--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li class="forstrategy">
                 <div class="antennae">
                 <svg width="64" height="64">
-                    <use href="../goit-markup-hw-04/images/icons.svg#icon-antenna-1"></use>
+                    <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>  
                 </div>
                 <h3 class="dos">
@@ -62,6 +62,11 @@
                     </p> 
             </li>
             <li class="forstrategy">
+                <div class="antennae">
+                <svg width="64" height="64">
+                    <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+                </div>
                 <h3 class="dos"> 
                     Punctuality
                 </h3>
