--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
                     </p>
             </li>
             <li class="forstrategy">
+                <div class="antennae">
+                    <svg width="64" height="64">
+                        <use href="./images/icons.svg#icon-diagram-1"></use>
+                    </svg>
+                </div>
                 <h3 class="dos">
                     Diligence
                 </h3>
@@ -83,6 +88,11 @@
                     </p>
             </li>
             <li class="forstrategy">
+                <div class="antennae">
+                    <svg width="64" height="64">
+                        <use href="./images/icons.svg#icon-astronaut-1"></use>
+                    </svg>
+                </div>
                 <h3 class="dos">
                     Technologies
                 </h3>
