--- a/index.html
+++ b/index.html
@@ -124,6 +124,15 @@
                 <li class="quattroi">
                     <img src="./images/sq4.jpg" alt="chad" width="264">
                     <div class="markimark">
+                        <ul class="social">
+                        <li class="socialnetwork">
+                        <a href="http://" class="instagram">
+                            <svg width="16" height="16" class="curry">
+                            <use href="./images/icons.svg#icon-Ellipseinsta"></use>
+                            </svg>
+                        </a>
+                        </li>
+                        </ul>
                     <h3 class="quattroo">
                         Mark Guerrero
                     </h3>
