--- a/index.html
+++ b/index.html
@@ -123,12 +123,6 @@
             <ul class="listii">
                 <li class="quattroi">
                     <img src="./images/sq4.jpg" alt="chad" width="264">
-                    <h3 class="quattroo">
-                        Mark Guerrero
-                    </h3>
-                    <p class="dosp">
-                        Product Designer
-                    </p>
                     <div class="markimark">
                         <ul class="social">
                         <li class="socialnetwork">
@@ -140,9 +134,12 @@
                         </li>
                         </ul>
                     </div>
-
-
-                    
+                    <h3 class="quattroo">
+                        Mark Guerrero
+                    </h3>
+                    <p class="dosp">
+                        Product Designer
+                    </p>
                 </li>
                 <li class="quattroi">
                     <img src="./images/sq3.jpg" alt="simp" width="264">
@@ -180,6 +177,18 @@
             </ul>
         </div>
         </section>
+    <section class="newsection">
+        <div class="container">
+            <h2 class="sectiuneacinci">Customers</h2>
+            <ul class="customerlist">
+                <li class="firstclient">
+                <a href="http://" class="customerslink">
+                <svg width="104" height="56" class="firstcustomer" ></svg>
+                </a>
+                </li>
+            </ul>
+        </div>
+    </section>
     </main>
     <footer class="feet">
         <div class="espanol container">
