--- a/index.html
+++ b/index.html
@@ -183,9 +183,46 @@
             <ul class="customerlist">
                 <li class="firstclient">
                 <a href="http://" class="customerslink">
-                <svg width="104" height="56" class="firstcustomer" ></svg>
+                <svg width="104" height="56" class="firstcustomer" >
+                    <use href="./images/icons.svg#icon-Logo1"></use>
+                </svg>
                 </a>
                 </li>
+                <li class="firstclient">
+                    <a href="http://" class="customerslink">
+                    <svg width="104" height="56" class="firstcustomer" >
+                        <use href="./images/icons.svg#icon-Logo2"></use>
+                    </svg>
+                    </a>
+                    </li>
+                    <li class="firstclient">
+                        <a href="http://" class="customerslink">
+                        <svg width="104" height="56" class="firstcustomer" >
+                            <use href="./images/icons.svg#icon-Logo3"></use>
+                        </svg>
+                        </a>
+                        </li>
+                        <li class="firstclient">
+                            <a href="http://" class="customerslink">
+                            <svg width="104" height="56" class="firstcustomer" >
+                                <use href="./images/icons.svg#icon-Logo4atentie"></use>
+                            </svg>
+                            </a>
+                            </li>
+                            <li class="firstclient">
+                                <a href="http://" class="customerslink">
+                                <svg width="104" height="56" class="firstcustomer" >
+                                    <use href="./images/icons.svg#icon-Logo5"></use>
+                                </svg>
+                                </a>
+                                </li>
+                                <li class="firstclient">
+                                    <a href="http://" class="customerslink">
+                                    <svg width="104" height="56" class="firstcustomer" >
+                                        <use href="./images/icons.svg#icon-Logo6"></use>
+                                    </svg>
+                                    </a>
+                                    </li>
             </ul>
         </div>
     </section>
