--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li class="forstrategy">
                 <div class="antennae">
                 <svg width="64" height="64">
-                    <use href="./images/icons.svg#icon-antenna-1"></use>
+                    <use href="./images/icons.svg#icon-antenna-1-1"></use>
                 </svg>  
                 </div>
                 <h3 class="dos">
@@ -116,7 +116,7 @@
     </div>
     </section>
     <section class="quattro">
-        <div class="divino container">
+        <div class="container">
             <h2 class="tres">
                 Our Team
             </h2>
@@ -229,14 +229,45 @@
     </main>
     <footer class="feet">
         <div class="espanol container">
+            <div class="explanation">
         <a href="./index.html" class="logoi link">Web<span class="whitecolor">Studio</span></a>
         <p class="feetflow">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
-        <address>
-            <a href="#">info@devstudio.com</a>
-            <a href="tel:+110001111111">+11(000)111-11-11</a>
-        </address>
+           </div>
+           <div class="secondchild">
+            <p class="footermedia">Social Media</p>
+            <ul class="footerlist">
+            <li class="flesh">
+                <a href="http://" class="psalm">
+                    <svg width="24" height="24" class="fleshpsalm">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="flesh">
+                <a href="http://" class="psalm">
+                    <svg width="24" height="24" class="fleshpsalm">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="flesh">
+                <a href="http://" class="psalm">
+                    <svg width="24" height="24" class="fleshpsalm">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="flesh">
+                <a href="http://" class="psalm">
+                    <svg width="24" height="24" class="fleshpsalm">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                </a>
+            </li>
+            </ul>
+           </div>
     </div>
     </footer>
 </body>
