--- a/portfolio.html
+++ b/portfolio.html
@@ -172,15 +172,48 @@
         </div>
         </section>
     </main>
-    <footer class="morefeet">
-        <a href="./index.html" class="logo link">Web<span class="whitecolor">Studio</span></a>
+    <footer class="feet">
+        <div class="espanol container">
+            <div class="explanation">
+        <a href="./index.html" class="logoi link">Web<span class="whitecolor">Studio</span></a>
         <p class="feetflow">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
-        <address>
-            <a href="#">info@devstudio.com</a>
-            <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
-        </address>
+           </div>
+           <div class="secondchild">
+            <p class="footermedia">Social Media</p>
+            <ul class="footerlist">
+            <li class="flesh">
+                <a href="http://" class="psalm">
+                    <svg width="24" height="24" class="fleshpsalm">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="flesh">
+                <a href="http://" class="psalm">
+                    <svg width="24" height="24" class="fleshpsalm">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="flesh">
+                <a href="http://" class="psalm">
+                    <svg width="24" height="24" class="fleshpsalm">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="flesh">
+                <a href="http://" class="psalm">
+                    <svg width="24" height="24" class="fleshpsalm">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                </a>
+            </li>
+            </ul>
+           </div>
+    </div>
     </footer>
 </body>
 </html>
