--- a/index.html
+++ b/index.html
@@ -161,6 +161,36 @@
                     <p class="dosp">
                         Marketing
                     </p>
+                    <ul class="garciasocial">
+                    <li class="garciamedia">
+                    <a href="http://" class="camillag">
+                        <svg width="16" height="16" class="camillagarciasocial">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                    </a>
+                    </li>
+                    <li class="garciamedia">
+                        <a href="http://" class="camillag">
+                            <svg width="16" height="16" class="camillagarciasocial">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                            </svg>
+                        </a>
+                        </li>
+                        <li class="garciamedia">
+                            <a href="http://" class="camillag">
+                                <svg width="16" height="16" class="camillagarciasocial">
+                                <use href="./images/icons.svg#icon-facebook-1"></use>
+                                </svg>
+                            </a>
+                            </li>
+                            <li class="garciamedia">
+                                <a href="http://" class="camillag">
+                                    <svg width="16" height="16" class="camillagarciasocial">
+                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </a>
+                                </li>
+                    </ul>
                 </div>
                 </li>
                 <li class="quattroi">
