--- a/index.html
+++ b/index.html
@@ -124,22 +124,43 @@
                 <li class="quattroi">
                     <img src="./images/sq4.jpg" alt="chad" width="264">
                     <div class="markimark">
-                        <ul class="social">
-                        <li class="socialnetwork">
-                        <a href="http://" class="instagram">
-                            <svg width="16" height="16" class="curry">
-                            <use href="./images/icons.svg#icon-Ellipseinsta"></use>
-                            </svg>
-                        </a>
-                        </li>
-                        </ul>
-                    </div>
                     <h3 class="quattroo">
                         Mark Guerrero
                     </h3>
                     <p class="dosp">
                         Product Designer
                     </p>
+                    <ul class="garciasocial">
+                        <li class="garciamedia">
+                        <a href="http://" class="camillag">
+                            <svg width="16" height="16" class="camillagarciasocial">
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                            </svg>
+                        </a>
+                        </li>
+                        <li class="garciamedia">
+                            <a href="http://" class="camillag">
+                                <svg width="16" height="16" class="camillagarciasocial">
+                                <use href="./images/icons.svg#icon-twitter-1"></use>
+                                </svg>
+                            </a>
+                            </li>
+                            <li class="garciamedia">
+                                <a href="http://" class="camillag">
+                                    <svg width="16" height="16" class="camillagarciasocial">
+                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                    </svg>
+                                </a>
+                                </li>
+                                <li class="garciamedia">
+                                    <a href="http://" class="camillag">
+                                        <svg width="16" height="16" class="camillagarciasocial">
+                                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                        </svg>
+                                    </a>
+                                    </li>
+                    </ul>
+                </div>
                 </li>
                 <li class="quattroi">
                     <img src="./images/sq3.jpg" alt="simp" width="264">
@@ -150,6 +171,36 @@
                     <p class="dosp">
                         Frontend Developer
                     </p>
+                    <ul class="garciasocial">
+                        <li class="garciamedia">
+                        <a href="http://" class="camillag">
+                            <svg width="16" height="16" class="camillagarciasocial">
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                            </svg>
+                        </a>
+                        </li>
+                        <li class="garciamedia">
+                            <a href="http://" class="camillag">
+                                <svg width="16" height="16" class="camillagarciasocial">
+                                <use href="./images/icons.svg#icon-twitter-1"></use>
+                                </svg>
+                            </a>
+                            </li>
+                            <li class="garciamedia">
+                                <a href="http://" class="camillag">
+                                    <svg width="16" height="16" class="camillagarciasocial">
+                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                    </svg>
+                                </a>
+                                </li>
+                                <li class="garciamedia">
+                                    <a href="http://" class="camillag">
+                                        <svg width="16" height="16" class="camillagarciasocial">
+                                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                        </svg>
+                                    </a>
+                                    </li>
+                    </ul>
                 </div>
                 </li>
                 <li class="quattroi">
@@ -202,6 +253,36 @@
                 <p class="dosp">
                     UI Designer
                 </p>
+                <ul class="garciasocial">
+                    <li class="garciamedia">
+                    <a href="http://" class="camillag">
+                        <svg width="16" height="16" class="camillagarciasocial">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                    </a>
+                    </li>
+                    <li class="garciamedia">
+                        <a href="http://" class="camillag">
+                            <svg width="16" height="16" class="camillagarciasocial">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                            </svg>
+                        </a>
+                        </li>
+                        <li class="garciamedia">
+                            <a href="http://" class="camillag">
+                                <svg width="16" height="16" class="camillagarciasocial">
+                                <use href="./images/icons.svg#icon-facebook-1"></use>
+                                </svg>
+                            </a>
+                            </li>
+                            <li class="garciamedia">
+                                <a href="http://" class="camillag">
+                                    <svg width="16" height="16" class="camillagarciasocial">
+                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </a>
+                                </li>
+                </ul>
             </div>
                 </li>
             </ul>
