--- a/index.html
+++ b/index.html
@@ -132,28 +132,28 @@
                     </p>
                     <ul class="garciasocial">
                         <li class="garciamedia">
-                        <a href="http://" class="camillag">
+                        <a href="" class="camillag">
                             <svg width="16" height="16" class="camillagarciasocial">
                             <use href="./images/icons.svg#icon-instagram-2"></use>
                             </svg>
                         </a>
                         </li>
                         <li class="garciamedia">
-                            <a href="http://" class="camillag">
+                            <a href="" class="camillag">
                                 <svg width="16" height="16" class="camillagarciasocial">
                                 <use href="./images/icons.svg#icon-twitter-1"></use>
                                 </svg>
                             </a>
                             </li>
                             <li class="garciamedia">
-                                <a href="http://" class="camillag">
+                                <a href="" class="camillag">
                                     <svg width="16" height="16" class="camillagarciasocial">
                                     <use href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                                 </li>
                                 <li class="garciamedia">
-                                    <a href="http://" class="camillag">
+                                    <a href="" class="camillag">
                                         <svg width="16" height="16" class="camillagarciasocial">
                                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                                         </svg>
@@ -173,28 +173,28 @@
                     </p>
                     <ul class="garciasocial">
                         <li class="garciamedia">
-                        <a href="http://" class="camillag">
+                        <a href="" class="camillag">
                             <svg width="16" height="16" class="camillagarciasocial">
                             <use href="./images/icons.svg#icon-instagram-2"></use>
                             </svg>
                         </a>
                         </li>
                         <li class="garciamedia">
-                            <a href="http://" class="camillag">
+                            <a href="" class="camillag">
                                 <svg width="16" height="16" class="camillagarciasocial">
                                 <use href="./images/icons.svg#icon-twitter-1"></use>
                                 </svg>
                             </a>
                             </li>
                             <li class="garciamedia">
-                                <a href="http://" class="camillag">
+                                <a href="" class="camillag">
                                     <svg width="16" height="16" class="camillagarciasocial">
                                     <use href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                                 </li>
                                 <li class="garciamedia">
-                                    <a href="http://" class="camillag">
+                                    <a href="" class="camillag">
                                         <svg width="16" height="16" class="camillagarciasocial">
                                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                                         </svg>
@@ -214,28 +214,28 @@
                     </p>
                     <ul class="garciasocial">
                     <li class="garciamedia">
-                    <a href="http://" class="camillag">
+                    <a href="" class="camillag">
                         <svg width="16" height="16" class="camillagarciasocial">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                         </svg>
                     </a>
                     </li>
                     <li class="garciamedia">
-                        <a href="http://" class="camillag">
+                        <a href="" class="camillag">
                             <svg width="16" height="16" class="camillagarciasocial">
                             <use href="./images/icons.svg#icon-twitter-1"></use>
                             </svg>
                         </a>
                         </li>
                         <li class="garciamedia">
-                            <a href="http://" class="camillag">
+                            <a href="" class="camillag">
                                 <svg width="16" height="16" class="camillagarciasocial">
                                 <use href="./images/icons.svg#icon-facebook-1"></use>
                                 </svg>
                             </a>
                             </li>
                             <li class="garciamedia">
-                                <a href="http://" class="camillag">
+                                <a href="" class="camillag">
                                     <svg width="16" height="16" class="camillagarciasocial">
                                     <use href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
@@ -255,28 +255,28 @@
                 </p>
                 <ul class="garciasocial">
                     <li class="garciamedia">
-                    <a href="http://" class="camillag">
+                    <a href="" class="camillag">
                         <svg width="16" height="16" class="camillagarciasocial">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                         </svg>
                     </a>
                     </li>
                     <li class="garciamedia">
-                        <a href="http://" class="camillag">
+                        <a href="" class="camillag">
                             <svg width="16" height="16" class="camillagarciasocial">
                             <use href="./images/icons.svg#icon-twitter-1"></use>
                             </svg>
                         </a>
                         </li>
                         <li class="garciamedia">
-                            <a href="http://" class="camillag">
+                            <a href="" class="camillag">
                                 <svg width="16" height="16" class="camillagarciasocial">
                                 <use href="./images/icons.svg#icon-facebook-1"></use>
                                 </svg>
                             </a>
                             </li>
                             <li class="garciamedia">
-                                <a href="http://" class="camillag">
+                                <a href="" class="camillag">
                                     <svg width="16" height="16" class="camillagarciasocial">
                                     <use href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
@@ -293,42 +293,42 @@
             <h2 class="sectiuneacinci">Customers</h2>
             <ul class="customerlist">
                 <li class="firstclient">
-                <a href="http://" class="customerslink">
+                <a href="" class="customerslink">
                 <svg width="104" height="56" class="firstcustomer" >
                     <use href="./images/icons.svg#icon-Logo1"></use>
                 </svg>
                 </a>
                 </li>
                 <li class="firstclient">
-                    <a href="http://" class="customerslink">
+                    <a href="" class="customerslink">
                     <svg width="104" height="56" class="firstcustomer" >
                         <use href="./images/icons.svg#icon-Logo2"></use>
                     </svg>
                     </a>
                     </li>
                     <li class="firstclient">
-                        <a href="http://" class="customerslink">
+                        <a href="" class="customerslink">
                         <svg width="104" height="56" class="firstcustomer" >
                             <use href="./images/icons.svg#icon-Logo3"></use>
                         </svg>
                         </a>
                         </li>
                         <li class="firstclient">
-                            <a href="http://" class="customerslink">
+                            <a href="" class="customerslink">
                             <svg width="104" height="56" class="firstcustomer" >
                                 <use href="./images/icons.svg#icon-Logo4atentie"></use>
                             </svg>
                             </a>
                             </li>
                             <li class="firstclient">
-                                <a href="http://" class="customerslink">
+                                <a href="" class="customerslink">
                                 <svg width="104" height="56" class="firstcustomer" >
                                     <use href="./images/icons.svg#icon-Logo5"></use>
                                 </svg>
                                 </a>
                                 </li>
                                 <li class="firstclient">
-                                    <a href="http://" class="customerslink">
+                                    <a href="" class="customerslink">
                                     <svg width="104" height="56" class="firstcustomer" >
                                         <use href="./images/icons.svg#icon-Logo6"></use>
                                     </svg>
@@ -350,28 +350,28 @@
             <p class="footermedia">Social Media</p>
             <ul class="footerlist">
             <li class="flesh">
-                <a href="http://" class="psalm">
+                <a href="" class="psalm">
                     <svg width="24" height="24" class="fleshpsalm">
                     <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                 </a>
             </li>
             <li class="flesh">
-                <a href="http://" class="psalm">
+                <a href="" class="psalm">
                     <svg width="24" height="24" class="fleshpsalm">
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                 </a>
             </li>
             <li class="flesh">
-                <a href="http://" class="psalm">
+                <a href="" class="psalm">
                     <svg width="24" height="24" class="fleshpsalm">
                     <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                 </a>
             </li>
             <li class="flesh">
-                <a href="http://" class="psalm">
+                <a href="" class="psalm">
                     <svg width="24" height="24" class="fleshpsalm">
                     <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
