--- a/portfolio.html
+++ b/portfolio.html
@@ -184,28 +184,28 @@
             <p class="footermedia">Social Media</p>
             <ul class="footerlist">
             <li class="flesh">
-                <a href="http://" class="psalm">
+                <a href="" class="psalm">
                     <svg width="24" height="24" class="fleshpsalm">
                     <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                 </a>
             </li>
             <li class="flesh">
-                <a href="http://" class="psalm">
+                <a href="" class="psalm">
                     <svg width="24" height="24" class="fleshpsalm">
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                 </a>
             </li>
             <li class="flesh">
-                <a href="http://" class="psalm">
+                <a href="" class="psalm">
                     <svg width="24" height="24" class="fleshpsalm">
                     <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                 </a>
             </li>
             <li class="flesh">
-                <a href="http://" class="psalm">
+                <a href="" class="psalm">
                     <svg width="24" height="24" class="fleshpsalm">
                     <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
